# bovista

./: .gitignore  01-philosophy.html  04-visuals.html  05-rendering-pipeline.html  07-chunked-rendering.html  12-python.html  13-wasm.html  404.html  Cargo.toml  README.md  build-wasm.sh  build.rs  build_wasm.sh  custom-10a296ff.js  custom-53791975.js  custom-e21a0c71.css  examples-slice-viewer.html  examples-volume-renderer.html  examples.html  further-reading.html  index.html  introduction.html  print.html  pyproject.toml  reference.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-1bfc6048.js  searchindex-6a6c8c20.js  searchindex-bd5612cb.js  searchindex-ec0ef7b7.js  serve_docs.sh  toc-17ace711.js  toc-4cd89307.js  toc-5873499f.js  toc.html
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml
api/: crates.js  help.html  settings.html  src-files.js
api/bovista/: all.html  index.html  sidebar-items.js
api/bovista/bindings_common/: fn.pack_u16_tile.html  fn.pack_u8_tile.html  fn.with_visual_mut.html  fn.with_visual_ref.html  index.html  sidebar-items.js  type.VisualRef.html
api/bovista/camera/: enum.ProjectionMode.html  index.html  sidebar-items.js  struct.Camera.html  struct.FrustumPlanes.html
api/bovista/renderer/: index.html  sidebar-items.js  struct.CameraUniforms.html  struct.Renderer.html
api/bovista/scene/: index.html  struct.Scene.html
api/bovista/spatial/: index.html  sidebar-items.js  struct.VolumeGrid.html
api/bovista/visual/: enum.BlendMode.html  enum.VertexFormat.html  index.html  sidebar-items.js  struct.CameraInfo.html  struct.Transform.html  struct.VertexAttribute.html  struct.VertexBufferLayout.html  trait.Visual.html
api/bovista/visuals/: index.html  sidebar-items.js
api/bovista/visuals/atlas/: index.html  (+2 more)
api/search.index/: 007ff37ae8.js  01d04165f1.js  02508bb3b5.js  02fe3e89e0.js  078768ad46.js  07a174ab61.js  08345cf777.js  0aa9dc9893.js  0b269f2ca3.js  0bd473a562.js  0d2a6dfa77.js  0e8f85157c.js  0ee292fdc9.js  0f25974445.js  10d3ebe213.js  11cd39888f.js  12032e324e.js  131affcd9d.js  13f71c4946.js  1473f9acc1.js  149fa41f5c.js  162f08ef1e.js  185b4cae47.js  1946e92b2c.js  198046965b.js  1a7a38a37b.js  1b2d8d146f.js  1b339c75ac.js  1cecff5e15.js  1e760859f7.js  2008dad227.js  2163f8cf8a.js  21b13d924b.js  2208cc9760.js  22a12e6106.js  22b7244a44.js  22dd25d1a7.js  2360952e2d.js  238ccc9daf.js  24754b4502.js  (+89 more)
api/search.index/crateNames/: 6b038f7907.js
api/search.index/desc/: 467cf8a742.js  4af5c821fa.js  8deacfce20.js
api/search.index/entry/: 746ec28cac.js  753473ff82.js  f61fd5e91a.js
api/search.index/function/: 2df5bc3618.js  32b2bbf6eb.js  38db3e9249.js
api/search.index/generic_inverted_index/: 2ba2cca465.js  3af0dd21d3.js  e59f95a3c9.js
api/search.index/name/: 27260cf9ce.js  710f710594.js  7c154e10d5.js
api/search.index/normalizedName/: 7f88b30e59.js  b95228a187.js  f9813a4722.js
api/search.index/path/: 19e7c10da0.js  23d6c1dc44.js  6f5c7baf08.js
api/search.index/type/: 66bbb612e1.js  a0bca67fa9.js  e81546a2f7.js
api/src/bovista/: bindings_common.rs.html  camera.rs.html  lib.rs.html  renderer.rs.html  scene.rs.html  spatial.rs.html  visual.rs.html
bovista-codegen/: Cargo.toml
bovista-codegen/src/: lib.rs
docs/guide/: README.md  book.toml  build.sh
docs/guide/src/: 01-philosophy.md  04-visuals.md  05-rendering-pipeline.md  12-python.md  13-wasm.md  SUMMARY.md  examples.md  introduction.md
docs/wgpu-guide/: .gitignore  README.md  book.toml  build.sh  custom.css
docs/wgpu-guide/src/: 01-philosophy.md  02-components.md  03-renderer.md  04-visuals.md  05-3d-textures.md  05-rendering-pipeline.md  06-dynamic-geometry.md  07-chunked-rendering.md  08-remote-data.md  09-pipelines-shaders.md  10-bind-groups.md  11-render-loop.md  12-python.md  13-wasm.md  SUMMARY.md  examples-slice-viewer.md  examples-volume-renderer.md  further-reading.md  introduction.md  reference.md  wgpu-vs-opengl.md
examples/: README.md  image_simple.rs  index.html  point_cloud.rs  python_points.py  python_qt.py  python_simple.py  python_tk.py  python_viewer.py  python_zarr.py  python_zarr_chunked.py  python_zarr_multiscale.py  python_zarr_remote.py  python_zarr_remote_multiscale.py  remote_ome_zarr.py  test_image_chunked.py  test_new_image_visual.py  tk_test.py  wasm_zarr.rs
examples/common/: app.rs  camera_setup.rs  cli.rs  loader.rs  ome_zarr.rs
examples/gl_smoke/rust/: main.rs
examples/headless_render/rust/: main.rs
examples/labels_viewer/python/: labels_demo.py  labels_volume_demo.py  synthetic.py
examples/live/: index.html
examples/live/pkg/: bovista.js  bovista_bg.wasm
examples/live/slice_renderer/: main.js
examples/live/slice_viewer/: index.html  main.js
examples/live/volume_renderer/: index.html  main.js
examples/orbit_stream/rust/: main.rs
examples/remote_volume_renderer/rust/: main.rs
examples/slice_renderer/: README.md
examples/slice_renderer/python/: remote_ome_zarr.py
examples/slice_renderer/rust/: main.rs
examples/slice_renderer/web/: index.html  main.js
examples/slice_viewer/: README.md
examples/slice_viewer/python/: remote_ome_zarr.py
examples/slice_viewer/rust/: main.rs
examples/slice_viewer/web/: README.md  index.html  main.js  style.css
examples/volume_renderer/: README.md
examples/volume_renderer/python/: volume_ome_zarr.py
examples/volume_renderer/rust/: main.rs
examples/volume_renderer/web/: index.html  main.js
src/: bindings_common.rs  camera.rs  lib.rs  point_cloud.rs  python.rs  renderer.rs  scene.rs  spatial.rs  visual.rs  wasm.rs
src/shaders/: image.wgsl  lines.wgsl  tile.wgsl  virtual_tile.wgsl  volume_raymarch.wgsl
src/visuals/: atlas.rs  chunk_visual.rs  custom.rs  gpu_structs.rs  image.rs  image_strategy.rs  label_colors.rs  labels.rs  lines.rs  mod.rs  page_table.rs  points.rs  tile.rs  tiled_image.rs  virtual_texture.rs  volume.rs
src/visuals/shaders/: chunk.wgsl
web/: image.html  index.html  point_cloud.html  remote_ome_zarr.html  zarr_viewer.html
web/remote_ome_zarr/: index.html  main.js
web/volume_ome_zarr/: index.html
(+82 files in other folders)
