[workspace]
members = [".", "bovista-codegen"]
resolver = "2"

[package]
name = "bovista"
version = "0.1.0"
edition = "2021"

[dependencies]
bovista-codegen = { path = "bovista-codegen" }
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
winit = "0.30"
pollster = "0.3"
raw-window-handle = "0.6"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"], optional = true }
numpy = { version = "0.22", optional = true }

# Async runtime and futures
futures = "0.3"

# LRU cache for chunks
lru = "0.12"
half = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { version = "1", features = ["sync"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3", "numpy"]

[[example]]
name = "slice_viewer"
path = "examples/slice_viewer/rust/main.rs"
required-features = []

[[example]]
name = "volume_renderer"
path = "examples/volume_renderer/rust/main.rs"
required-features = []
