[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bovista"
version = "0.1.0"
description = "High-performance 3D visualization library for scientific computing"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.20",
    "pyside6>=6.6.3.1",
    "scikit-image>=0.21.0",
    "zarr>=2.16.1",
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
module-name = "bovista"

[tool.uv]
dev-dependencies = [
    "maturin>=1.7",
]
