[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bovista"
version = "0.1.0"
description = "High-performance 3D visualization library for scientific computing"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp>=3.10.11",
    "fsspec>=2025.3.0",
    "numpy>=1.20",
    "PyQt6>=6.6",
    "requests>=2.32.4",
    "zarr>=3.0.8",  # v3 required for OME-Zarr 0.5 support
]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
module-name = "bovista"

[dependency-groups]
dev = [
    "maturin>=1.7",
]

[tool.uv]
# Cache keys for automatic Rust rebuilds
cache-keys = [
    {file = "Cargo.toml"},
    {file = "src/**/*.rs"}
]
